--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <meta name="author" content="">
         <title>Blank Template for Bootstrap</title>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-        <link href="style.css" rel="stylesheet">
+        <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet">
+        <link href="assets/css/style.css" rel="stylesheet">
         <!-- Custom styles for this template -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cairo:400,900,700&display=swap">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,13 +17,13 @@
     <body>
         <div class="container-fluid full_container">
             <div class="row full_row">
-                <img src="img/img1.png">
+                <img src="images/img1.png">
             </div>
         </div>
         <div class="container-fluid full_container">
             <div class="row full_row">
                 <div class="col-auto full_col">
-                    <img src="img/img5.png">
+                    <img src="images/img5.png">
                 </div>
                 <div class="bg_color_main_navbar col">
                     <div class="padding_top_main_link row">
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="col-auto full_col">
-                    <img alt="" src="img/img4.png"> 
+                    <img alt="" src="images/img4.png"> 
                 </div>
             </div>
         </div>
@@ -78,7 +78,7 @@
         <!-- Placed at the end of the document so the pages load faster -->
         <div class="container-fluid full_container">
             <div class="row full_row">
-                <img src="img/img17.png">
+                <img src="images/img17.png">
             </div>
         </div>
         <br/>
@@ -96,7 +96,7 @@
             <div class="block_row_width row">
                 <div class="col-md-4">
                     <div class="img_news_center">
-                        <img src="img/img21.png">
+                        <img src="images/img21.png">
                     </div>
                     <h3 class="title_news">عنوان الخبر يتم وضعه هنا</h3> 
                     <p class="text_news">م وه ميرول سبيا مو Lorem
@@ -107,7 +107,7 @@ ipsum ميرول سبيا مو .</p>
                 </div>
                 <div class="col-md-4">
                     <div class="img_news_center">
-                        <img src="img/img21.png">
+                        <img src="images/img21.png">
                     </div>
                     <h3 class="title_news">عنوان الخبر يتم وضعه هنا</h3> 
                     <p class="text_news">م وه ميرول سبيا مو Lorem
@@ -118,7 +118,7 @@ ipsum ميرول سبيا مو .</p>
                 </div>
                 <div class="col-md-4">
                     <div class="img_news_center">
-                        <img src="img/img21.png">
+                        <img src="images/img21.png">
                     </div>
                     <h3 class="title_news">عنوان الخبر يتم وضعه هنا</h3> 
                     <p class="text_news">م وه ميرول سبيا مو Lorem
@@ -154,6 +154,6 @@ ipsum ميرول سبيا مو .</p>
         </div>
         <script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/popper.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     </body>
 </html>
