--- a/index.html
+++ b/index.html
@@ -1,159 +1,198 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <title>Blank Template for Bootstrap</title>
-        <!-- Bootstrap core CSS -->
-        <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet">
-        <link href="assets/css/style.css" rel="stylesheet">
-        <!-- Custom styles for this template -->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cairo:400,900,700&display=swap">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    </head>
-    <body>
-        <div class="container-fluid full_container">
-            <div class="row full_row">
-                <img src="images/img1.png">
-            </div>
-        </div>
-        <div class="container-fluid full_container">
-            <div class="row full_row">
-                <div class="col-auto full_col">
-                    <img src="images/img5.png">
-                </div>
-                <div class="bg_color_main_navbar col">
-                    <div class="padding_top_main_link row">
-                        <div class="text-center col"> 
-                            <a href="" class="main_link main_link_hover">كن شريكا</a>
-                        </div>
-                        <div class="text-center col"> 
-                            <a href="" class="main_link main_link_hover">تبرع بالدم</a> 
-                        </div>
-                        <div class="text-center col"> 
-                            <a href="" class="main_link main_link_hover">الدعم المعنوي</a> 
-                        </div>
-                        <div class="text-center col"> 
-                            <a href="" class="main_link main_link_hover">الدعم المادي</a> 
-                        </div>
-                        <div class="text-center col"> 
-                            <a href="" class="main_link main_link_hover">المساعدات العاجلة</a> 
-                        </div>
+<!DOCTYPE html> 
+<html lang="en"> 
+    <head> 
+        <meta charset="utf-8"> 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
+        <meta name="description" content=""> 
+        <meta name="author" content=""> 
+        <title>Blank Template for Bootstrap</title>         
+        <!-- Bootstrap core CSS -->         
+        <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet"> 
+        <link href="assets/css/style.css" rel="stylesheet"> 
+        <!-- Custom styles for this template -->         
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cairo:400,900,700&display=swap"> 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+    </head>     
+    <body> 
+        <div class="container-fluid full_container"> 
+            <div class="row full_row main_banner">
+                <div class="row main_top_links">
+                    <div class="text-center main_links_col_icon_padding_top col-auto"> 
+                        <a href="" class="main_links_top"> <span class="fa-stack fa-lg"> <i class="fa fa-circle-thin fa-stack-2x"></i> <i class="fa fa-linkedin fa-stack-1x"></i> </span></a>
                     </div>
+                    <div class="text-center main_links_col_icon_padding_top col-auto"> 
+                        <a href="" class="main_links_top"> <span class="fa-stack fa-lg"> <i class="fa fa-circle-thin fa-stack-2x"></i> <i class="fa fa-twitter fa-stack-1x"></i> </span></a> 
+                    </div>
+                    <div class="text-center main_links_col_icon_padding_top col-auto"> 
+                        <a href="" class="main_links_top"> <span class="fa-stack fa-lg"> <i class="fa fa-circle-thin fa-stack-2x"></i> <i class="fa fa-facebook fa-stack-1x"></i> </span></a> 
+                    </div>
+                    <div class="text-center main_links_col_sperater_padding_top col-auto">
+                        <img src="images/img6.png"> 
+                    </div>                     
+                    <div class="col-auto main_links_col_padding_top text-center"> 
+                        <a href="" class="main_links_top main_link_hover">تسجيل</a> 
+                    </div>
+                    <div class="text-center main_links_col_sperater_padding_top col-auto">
+                        <img src="images/img6.png"> 
+                    </div>                     
+                    <div class="text-center main_links_col_padding_top col-auto"> 
+                        <a href="" class="main_links_top main_link_hover">اتصل بنا</a> 
+                    </div>
+                    <div class="text-center main_links_col_sperater_padding_top col-auto">
+                        <img src="images/img6.png"> 
+                    </div>                     
+                    <div class="text-center main_links_col_padding_top col-auto"> 
+                        <a href="" class="main_links_top main_link_hover">المركز الاعلامي</a>
+                    </div>                     
+                    <div class="text-center main_links_col_sperater_padding_top col-auto">
+                        <img src="images/img6.png"> 
+                    </div>
+                    <div class="text-center main_links_col_padding_top col-auto"> 
+                        <a href="" class="main_links_top main_link_hover">عن الجمعية</a> 
+                    </div>                                          
                 </div>
-                <div class="col-auto full_col">
-                    <img alt="" src="images/img4.png"> 
+                <div class="row main_links"> 
+                    <div class="col-auto full_col"> 
+                        <img src="images/img5.png"> 
+                    </div>                     
+                    <div class="bg_color_main_navbar col"> 
+                        <div class="padding_top_main_link row"> 
+                            <div class="text-center col"> 
+                                <a href="" class="main_link main_link_hover">كن شريكا</a> 
+                            </div>                             
+                            <div class="text-center col"> 
+                                <a href="" class="main_link main_link_hover">تبرع بالدم</a> 
+                            </div>                             
+                            <div class="text-center col"> 
+                                <a href="" class="main_link main_link_hover">الدعم المعنوي</a> 
+                            </div>                             
+                            <div class="text-center col"> 
+                                <a href="" class="main_link main_link_hover">الدعم المادي</a> 
+                            </div>                             
+                            <div class="text-center col"> 
+                                <a href="" class="main_link main_link_hover">المساعدات العاجلة</a> 
+                            </div>                             
+                        </div>                         
+                    </div>                     
+                    <div class="col-auto full_col"> 
+                        <img alt="" src="images/img4.png"> 
+                    </div>                     
                 </div>
-            </div>
-        </div>
-        <br/>
-        <br/>
-        <div class="container-fluid full_container">
-            <div class="row title_row_width">
+            </div>             
+        </div>         
+        <div class="container-fluid full_container"> 
+</div>         
+        <br/> 
+        <br/> 
+        <div class="container-fluid full_container"> 
+            <div class="row title_row_width"> 
                 <div class="col-9 bg_title_line"> 
-</div>
+</div>                 
                 <div class="col-3 title_text"> 
                     المساعدات العاجلة
-</div>
-            </div>
-        </div>
-        <div class="container-fluid full_container">
-            <div class="row slider_row_width">
-                <div class="col left_arrows">
-                    <i class="fa fa-angle-left"></i>
-                </div>
-                <div class="block_slider col">
-</div>
-                <div class="col left_arrows">
-                    <i class="fa fa-angle-right"></i>
-                </div>
-            </div>
-        </div>
-        <br/>
+</div>                 
+            </div>             
+        </div>         
+        <div class="container-fluid full_container"> 
+            <div class="row slider_row_width"> 
+                <div class="col left_arrows"> 
+                    <i class="fa fa-angle-left"></i> 
+                </div>                 
+                <div class="block_slider col"> 
+</div>                 
+                <div class="col left_arrows"> 
+                    <i class="fa fa-angle-right"></i> 
+                </div>                 
+            </div>             
+        </div>         
+        <br/> 
         <!-- Bootstrap core JavaScript
-    ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <div class="container-fluid full_container">
-            <div class="row full_row">
-                <img src="images/img17.png">
-            </div>
-        </div>
-        <br/>
-        <div class="container-fluid full_container">
-            <div class="row title_row_width">
+    ================================================== -->         
+        <!-- Placed at the end of the document so the pages load faster -->         
+        <div class="container-fluid full_container"> 
+            <div class="row full_row"> 
+                <img src="images/img17.png"> 
+            </div>             
+        </div>         
+        <br/> 
+        <div class="container-fluid full_container"> 
+            <div class="row title_row_width"> 
                 <div class="col-9 bg_title_line"> 
-</div>
+</div>                 
                 <div class="col-3 title_text"> 
                     آخر أخبار المؤسسة 
-</div>
-            </div>
-        </div>
-        <br/>
-        <div class="container-fluid full_container">
-            <div class="block_row_width row">
-                <div class="col-md-4">
-                    <div class="img_news_center">
-                        <img src="images/img21.png">
-                    </div>
+</div>                 
+            </div>             
+        </div>         
+        <br/> 
+        <div class="container-fluid full_container"> 
+            <div class="block_row_width row"> 
+                <div class="col-md-4"> 
+                    <div class="img_news_center"> 
+                        <img src="images/img21.png"> 
+                    </div>                     
                     <h3 class="title_news">عنوان الخبر يتم وضعه هنا</h3> 
                     <p class="text_news">م وه ميرول سبيا مو Lorem
 ipsum ميرول سبيا مو .</p> 
-                    <div class="more_news">
-                        <a href="">المزيد</a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="img_news_center">
-                        <img src="images/img21.png">
-                    </div>
+                    <div class="more_news"> 
+                        <a href="">المزيد</a> 
+                    </div>                     
+                </div>                 
+                <div class="col-md-4"> 
+                    <div class="img_news_center"> 
+                        <img src="images/img21.png"> 
+                    </div>                     
                     <h3 class="title_news">عنوان الخبر يتم وضعه هنا</h3> 
                     <p class="text_news">م وه ميرول سبيا مو Lorem
 ipsum ميرول سبيا مو .</p> 
-                    <div class="more_news">
-                        <a href="">المزيد</a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="img_news_center">
-                        <img src="images/img21.png">
-                    </div>
+                    <div class="more_news"> 
+                        <a href="">المزيد</a> 
+                    </div>                     
+                </div>                 
+                <div class="col-md-4"> 
+                    <div class="img_news_center"> 
+                        <img src="images/img21.png"> 
+                    </div>                     
                     <h3 class="title_news">عنوان الخبر يتم وضعه هنا</h3> 
                     <p class="text_news">م وه ميرول سبيا مو Lorem
 ipsum ميرول سبيا مو .</p> 
-                    <div class="more_news">
-                        <a href="">المزيد</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <br/>
-        <div class="container-fluid full_container">
-            <div class="row title_row_width">
+                    <div class="more_news"> 
+                        <a href="">المزيد</a> 
+                    </div>                     
+                </div>                 
+            </div>             
+        </div>         
+        <br/> 
+        <div class="container-fluid full_container"> 
+            <div class="row title_row_width"> 
                 <div class="col-9 bg_title_line"> 
-</div>
+</div>                 
                 <div class="col-3 title_text"> 
                     شركاؤنا من المجتمع
-</div>
-            </div>
-        </div>
+</div>                 
+            </div>             
+        </div>         
+        <br/> 
         <br/>
         <br/>
         <br/>
         <br/>
         <br/>
-        <br/>
-        <div class="container-fluid full_container">
-            <div class="row footer_width">
-                <a href="" class="footer_link">عن المؤسسة</a>
-                <a href="" class="footer_link">المركز الاعلامي</a>
-                <a href="" class="footer_link">اتصل بنا</a>
-            </div>
-        </div>
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/popper.js"></script>
-        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    </body>
+        <br/> 
+        <br/> 
+        <br/> 
+        <br/> 
+        <br/> 
+        <div class="container-fluid full_container"> 
+            <div class="row footer_width"> 
+                <a href="" class="footer_link">عن المؤسسة</a> 
+                <a href="" class="footer_link">المركز الاعلامي</a> 
+                <a href="" class="footer_link">اتصل بنا</a> 
+            </div>             
+        </div>         
+        <script src="assets/js/jquery.min.js"></script>         
+        <script src="assets/js/popper.js"></script>         
+        <script src="assets/bootstrap/js/bootstrap.min.js"></script>         
+    </body>     
 </html>
