done middle banner

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
         <meta name="description" content=""> 
         <meta name="author" content=""> 
-        <title>Blank Template for Bootstrap</title>         
+        <title>Home</title>         
         <!-- Bootstrap core CSS -->         
         <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet"> 
         <link href="assets/css/style.css" rel="stylesheet"> 
@@ -50,7 +50,7 @@
                     </div>
                     <div class="text-center main_links_col_padding_top col-auto"> 
                         <a href="" class="main_links_top main_link_hover">عن الجمعية</a> 
-                    </div>                                          
+                    </div>                     
                 </div>
                 <div class="row main_links"> 
                     <div class="col-auto full_col"> 
@@ -111,9 +111,23 @@
     ================================================== -->         
         <!-- Placed at the end of the document so the pages load faster -->         
         <div class="container-fluid full_container"> 
-            <div class="row full_row"> 
-                <img src="images/img17.png"> 
-            </div>             
+            <div class="full_row img_banner_middle row">
+                <div class="container" dir="rtl">
+                    <div class="row title_middle_banner">
+                        <br/>
+                        <br/>
+                        قدم زكاة اموالك
+                    </div>
+                    <div class="row text_middle_banner">
+                        أنشأت الجمعية صندوق الزكاة لتمكين الخيّرين من تقديم زكاة أموالهم لدعم مرضى السرطان الذين أعياهم المرض والظروف المادية الصعبة ،و يتم وضع أموال الزكاة في حساب خاص بها في البنك  دون أن تختلط بالتبرعات الأخرى، كما تصرف خلال حَول على علاج المرضى.
+</div>
+                    <div class="row" style="place-content: center;">
+                        <div class="col-auto text-center text_middle_link_banner">
+                            <a href="#" class="text_middle_link_text_banner">قدم زكاة أموالك</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>         
         <br/> 
         <div class="container-fluid full_container"> 
