--- a/index.html
+++ b/index.html
@@ -99,8 +99,134 @@
                 <div class="col left_arrows"> 
                     <i class="fa fa-angle-left"></i> 
                 </div>                 
-                <div class="block_slider col"> 
-</div>                 
+                <div class="block_slider col">
+                    <div class="row" style=" justify-content: center;"> 
+                        <div class="col-auto slider_background"> 
+                            <div class="row">
+                                <div class="col slider_top_col_padding_0">
+</div>
+                                <div class="col slider_top_col_padding_0">
+                                    <img src="images/img16.png"/>
+                                </div>
+                                <div class="col slider_top_col_padding_0">
+                                    <a href="#"> <img src="images/img11.png"/></a>
+                                </div>
+                            </div>
+                            <div class="row slider_row_payments">
+                                <div class="col slider_backgrount_col_1">
+                                    <div class="row slider_paymeny_yee">المتبقي</div>
+                                    <div class="row slider_payment_fee">
+                                        <span style="font-weight:bold">17,500</span>&nbsp;دل 
+                                    </div>
+                                </div>
+                                <div class="col slider_backgrount_col_2">
+                                    <div class="row slider_paymeny_yee">المطلوب</div>
+                                    <div class="row slider_payment_fee">
+                                        <span style="font-weight:bold">40,000</span>&nbsp; دل 
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row slider_text_name">مبلغ مالي لمعالجة مرضى السلطان في مشفى الأمل</div>
+                            <div class="row">
+                                <div class="col slider_pay_box">
+                                    <div class="row">
+                                        <div class="col-auto slider_pay_col_now">
+                                            <a href="#" style="color: white;">ادفع</a>
+                                        </div>
+                                        <div class="col-aut" style="padding-left: 20px;">
+                                            <a href="#"> <i class="fa fa-plus slider_plus_col"></i> </a>
+                                        </div>
+                                        <div class="col slider_pay_number">
+                                            100000 دل
+</div>
+                                        <div class="col-auto slider_minus_col_padding_0">
+                                            <a href="#"> <i class="fa fa-minus slider_minus_col"></i> </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-auto slider_background"> 
+                            <div class="row">
+                                <div class="col slider_top_col_padding_0">
+</div>
+                                <div class="col slider_top_col_padding_0">
+                                    <img src="images/img14.png"/>
+                                </div>
+                                <div class="col slider_top_col_padding_0">
+                                    <a href="#"> <img src="images/img11.png"/></a>
+                                </div>
+                            </div>
+                            <div class="row slider_row_payments">
+                                <div class="col slider_backgrount_col_1">
+                                    <div class="row slider_paymeny_yee">المتبقي</div>
+                                    <div class="row slider_payment_fee">
+                                        <span style="font-weight:bold">17,500</span>&nbsp;دل 
+                                    </div>
+                                </div>
+                                <div class="col slider_backgrount_col_2">
+                                    <div class="row slider_paymeny_yee">المطلوب</div>
+                                    <div class="row slider_payment_fee">
+                                        <span style="font-weight:bold">40,000</span>&nbsp; دل 
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row slider_text_name">مبلغ مالي لمعالجة مرضى السلطان في مشفى الأمل</div>
+                            <div class="row">
+                                <div class="col slider_pay_box">
+                                    <div class="row">
+                                        <div class="col-auto slider_pay_col_now">
+                                            <a href="#" style="color: white;">ادفع</a>
+                                        </div>
+                                        <div class="col-aut" style="padding-left: 20px;">
+                                            <a href="#"> <i class="fa fa-plus slider_plus_col"></i> </a>
+                                        </div>
+                                        <div class="col slider_pay_number">
+                                            100000 دل
+</div>
+                                        <div class="col-auto slider_minus_col_padding_0">
+                                            <a href="#"> <i class="fa fa-minus slider_minus_col"></i> </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-auto slider_background"> 
+                            <div class="row">
+                                <div class="col slider_top_col_padding_0">
+</div>
+                                <div class="col slider_top_col_padding_0">
+                                    <img src="images/img14.png"/>
+                                </div>
+                                <div class="col slider_top_col_padding_0">
+                                    <a href="#"> <img src="images/img11.png"/></a>
+                                </div>
+                            </div>
+                            <div class="row slider_row_payments">
+                                <div class="col slider_backgrount_col_1">
+                                    <div class="row slider_paymeny_yee">المتبقي</div>
+                                    <div class="row slider_payment_fee">
+                                        <span style="font-weight:bold">17,500</span>&nbsp;دل 
+                                    </div>
+                                </div>
+                                <div class="col slider_backgrount_col_2">
+                                    <div class="row slider_paymeny_yee">المطلوب</div>
+                                    <div class="row slider_payment_fee">
+                                        <span style="font-weight:bold">40,000</span>&nbsp; دل 
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row slider_text_name_2">مشفى الامل بحاجة لوحدات دم للمريض 
+                                <br>محمد علي عليان
+                            </div>
+                            <div class="row">
+                                <div class="col slider_pay_2_box">
+                                    <a href="#" style="color: #09a188;">تواصل مع المشفى </a>
+                                </div>
+                            </div>
+                        </div>                         
+                    </div>                     
+                </div>                 
                 <div class="col left_arrows"> 
                     <i class="fa fa-angle-right"></i> 
                 </div>                 
